@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # MAOR, API, MINOR
-mod_version=2.3.4
+mod_version=2.3.5
 # Dependencies
 mc_version=1.20.1
 forge_version=47.1.3
